--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ footer {
                 <li>Reportes de ventas diarias</li>
                 <li>SIN CONTRATO</li>
             </ul>
-            <button onclick="window.open('https://wa.me/50241529411', '_blank')">Adquirir PLUS</button>
+            <button onclick="window.open('https://wa.me/50241529411','_blank')">Adquirir PLUS</button>
         </div>
         <div class="pricing-card premium">
             <h3>PREMIUM</h3>
@@ -427,7 +427,7 @@ footer {
                 <li>4 visitas al mes sin costo</li>
                 <li>Facturación electrónica ILIMITADA</li>
             </ul>
-            <button onclick="window.open('https://wa.me/50241529411', '_blank')">Adquirir PREMIUM</button>
+            <button onclick="window.open('https://wa.me/50241529411','_blank')">Adquirir PREMIUM</button>
         </div>
     </div>
 </section>
@@ -438,13 +438,10 @@ footer {
     <video src="images/video2.mp4" controls></video>
 </section>
 
-<!-- Comentarios con formulario PHP -->
 <section id="comments" class="comments-section">
     <h2>Comentarios</h2>
-    <form id="commentForm" method="POST" action="send_comment.php">
-        <textarea name="comment" placeholder="Escribe tu comentario..." required></textarea><br>
-        <button type="submit">Enviar</button>
-    </form>
+    <textarea id="commentBox" placeholder="Escribe tu comentario..."></textarea><br>
+    <button onclick="sendWhatsAppComment()">Enviar</button>
 </section>
 
 <section id="contact" class="contact">
@@ -469,8 +466,20 @@ const observer = new IntersectionObserver(entries => {
     });
 },{threshold:0.2});
 elements.forEach(el => observer.observe(el));
+
+// Comentarios vía WhatsApp
+function sendWhatsAppComment() {
+    const comment = document.getElementById('commentBox').value.trim();
+    if(comment){
+        const phone = '+50241529411';
+        const text = encodeURIComponent("Nuevo comentario desde el sitio web:\n\n" + comment);
+        window.open(`https://wa.me/${phone}?text=${text}`, '_blank');
+        document.getElementById('commentBox').value = '';
+    } else {
+        alert('Por favor escribe un comentario.');
+    }
+}
 </script>
 
 </body>
 </html>
-
